lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:12: error: type mismatch;
 found   : Double(0.1)
 required: lessons.lander.universe.Point
	return Segment (0.1, 5.1)
                        ^