lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {

	var c = 0
	
	while ( c <  getSol.length)
	{
		
		
		c = c + 1
	}

	return Segment (0.1, 5.1)
}
